test/fail/match/match_bad_decompose_attempt.lly
#[
SyntaxError: Expected ':', not (.
Where: File "match_bad_decompose_attempt.lly" at line 14
]#

enum class Option[A] {
    Some(A),
    None
}

var v = None

match v: {
    case None(a):
    case Some(s):
}
